# Calculator

./: .gitignore  CMakeLists.txt  README.md
src/: buttons.c  buttons.h  calculator.c  calculator.h  globals.h  main.c
